--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 					<ul>
 						<li>
 							<a href="index.html">Home</a>
-							<ul>
+							<!-- <ul>
 								<li>
 									<a href="index.html">One Page Layout V1</a>
 								</li>
@@ -59,69 +59,19 @@
 								<li>
 									<a href="index-4.html">Home Page V2</a>
 								</li>
-							</ul>
+							</ul> -->
 						</li>
-						<li>
-							<a href="about.html">About</a>
-							<ul>
-								<li>
-									<a href="about.html">About Us V1</a>
-								</li>
-								<li>
-									<a href="about-v2.html">About Us V2</a>
-								</li>
-							</ul>
-						</li>
-						<li>
-							<a href="javascript:void(0);">Pages</a>
-							<ul>
-								<li>
-									<a href="team.html">Our Team</a>
-								</li>
-								<li>
-									<a href="services.html">Our Services</a>
-								</li>
-							</ul>
-						</li>
-						<li>
-							<a href="javascript:void(0);">Portfolio</a>
-							<ul>
-								<li>
-									<a href="portfolio-full-width.html">Full Width Layout</a>
-								</li>
-								<li>
-									<a href="portfolio-2-column.html">2 Columns Layout</a>
-								</li>
-								<li>
-									<a href="portfolio-3-column.html">3 Columns Layout</a>
-								</li>
-								<li>
-									<a href="portfolio-4-column.html">4 Columns Layout</a>
-								</li>
-								<li>
-									<a href="portfolio-grid-masonry.html">Masonry Layout</a>
-								</li>
-								<li>
-									<a href="portfolio-grid.html">Grid Layout</a>
-								</li>
-								<li>
-									<a href="portfolio-details.html">Portfolio Details</a>
-								</li>
-							</ul>
-						</li>
-						<li>
-							<a href="pricing.html">Pricing</a>
-						</li>
+						
 						<li class="active">
 							<a href="javascript:void(0);">Blog</a>
-							<ul>
-								<li>
+							<!-- <ul> -->
+								<!-- <li>
 									<a href="blog-grid-no-sidebar.html">Grid Layout</a>
-								</li>
-								<li class="active">
+								</li> -->
+								<!-- <li class="active">
 									<a href="blog-grid-left-sidebar.html">Grid With Left Sidebar</a>
-								</li>
-								<li>
+								</li> -->
+								<!-- <li>
 									<a href="blog-grid-right-sidebar.html">Grid With Right Sidebar</a>
 								</li>
 								<li>
@@ -141,15 +91,15 @@
 								</li>
 								<li>
 									<a href="blog-post-right-sidebar.html">Blog Single - Right Sidebar</a>
-								</li>
-							</ul>
+								</li> -->
+							<!-- </ul> -->
 						</li>
-						<li>
+						<!-- <li>
 							<a href="contact.html">Contact</a>
 						</li>
-						<li>
+						<li>-->
 							<a href="javascript:void(0);" id="search"><i class="fa fa-search" aria-hidden="true"></i></a>
-						</li>
+						</li> 
 					</ul>
 				</div>
 			</nav>
@@ -179,6 +129,7 @@
 			</div>
 		</div>
 		<div class="blogs-wrapper clearfix left-sidebar">
+			<h2 style="text-align:center; font-size:50px; color: #171717;background-color: #946f6a;">My Blogs</h2>
 			<div class="container">
 				<aside class="blogs-sidebar">
 					<div class="recent-posts-div">
@@ -565,25 +516,36 @@
 				</section>
 			</div>
 		</div>
-		<div class="buy-khamu-wrapper">
+		<!-- <div class="buy-khamu-wrapper">
 			<div class="container">
 				<h3>
 					<small>EVERYTHING YOU WANT IS HERE</small> BUY KHAMU TEMPLATE NOW</h3>
 				<a href="#" class="buy-now-btn">Buy Now</a>
 			</div>
-		</div>
+		</div> -->
 		<!-- Footer -->
 
-		<footer class="footer footer-v2">
+		 <footer class="footer footer-v2 text-center">
 			<a href="#top" class="scrolltop"><i class="fa fa-angle-double-up" aria-hidden="true"></i></a>
-			<div class="container">
+            <div class="copyright-pk">
+				<div class="container">
+					<!-- <div class="footlinks">
+						<a href="#">Privacy Policy</a>
+						<a href="#">Terms of Use</a>
+					</div> -->
+					<p style="text-align: center;">All rights Reserved 
+						<a href="#">@Team BOT</a>
+					</p>
+				</div>
+			</div>
+			<!--<div class="container">
 				<div class="row">
 					<div class="col-md-3 col-sm-12 col-xs-12">
 						<h4>About Us</h4>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque rutrum pellesque imperdiet. Nulla lacinia iaculis nulla.</p>
 						<a href="#" class="learn-more-link">Learn more</a>
+						<img src="images/footer-logo.png" alt="khamu"> </div>
 						<div class="footer-logo">
-							<img src="images/footer-logo.png" alt="khamu"> </div>
 					</div>
 					<div class="col-md-3 col-sm-4 col-xs-12">
 						<h4>useful links</h4>
@@ -646,19 +608,9 @@
 						</ul>
 					</div>
 				</div>
-			</div>
-			<div class="copyright-pk">
-				<div class="container">
-					<div class="footlinks">
-						<a href="#">Privacy Policy</a>
-						<a href="#">Terms of Use</a>
-					</div>
-					<p>All rights Reserved
-						<a href="#">@Jigsawlab</a>
-					</p>
-				</div>
-			</div>
-		</footer>
+			</div>-->
+			
+		</footer> 
 	</main>
 
 	<!-- jQuery (necessary for JavaScript plugins) -->
